# thilenius

./: .gitignore  .gitmodules  bootstrap  fbthrift_test  launch_stack  thilenius.pem  wre_site.pem
base/: .ycm_extra_conf.py  CMakeLists.txt  arguments.cc  arguments.h  async_process.cc  async_process.h  auto_update.cc  auto_update.h  blocking_stream.hh  crypto.cc  crypto.h  crypto_test.cc  dependency.cc  dependency.h  dependency_test.cc  directory.cc  directory.h  directory_test.cc  file.cc  file.h  file_test.cc  guid.cc  guid.h  http.cc  http.h  http_test.cc  input.hh  log.cc  log.h  macros.h  mutex.h  path.cc  path.h  path_test.cc  process.cc  process.h  process_test.cc  regex.cc  regex.h  regex_test.cc  (+10 more)
base/cmake/: CMakeLists.txt
base/curl/: CMakeLists.txt
base/gflags/: CMakeLists.txt
base/glog/: CMakeLists.txt  logging.h  logging.h.in  raw_logging.h.in  stl_logging.h  stl_logging.h.in
base/gmock/: CMakeLists.txt  gmock-actions.h  gmock-cardinalities.h  gmock-generated-actions.h  gmock-generated-actions.h.pump  gmock-generated-function-mockers.h  gmock-generated-function-mockers.h.pump  gmock-generated-matchers.h  gmock-generated-matchers.h.pump  gmock-generated-nice-strict.h  gmock-generated-nice-strict.h.pump  gmock-internal-utils.h  gmock-matchers.h  gmock-more-matchers.h  gmock-port.h  gmock-spec-builders.h  gmock.h
base/gmock/internal/: gmock-generated-internal-utils.h.pump  gmock-internal-utils.h  gmock-port.h
base/gtest/: CMakeLists.txt  gtest-param-test.h.pump  gtest-param-util-generated.h  gtest-param-util-generated.h.pump  gtest.h
base/zlib/: CMakeLists.txt
cloud/fiber/: .ycm_extra_conf.py  CMakeLists.txt  fiber.thrift  fiber_client.cc  fiber_client.h  fiber_mapper.cc  fiber_mapper.h  fiber_model.cc  fiber_model.h
cloud/fiber/cli/: .ycm_extra_conf.py  CMakeLists.txt  cli.cc
cloud/fiber/server/: .ycm_extra_conf.py  CMakeLists.txt  fiber_handler.cc  fiber_handler.h  server.cc
cloud/mongo_db/: Dockerfile  launch_dev
cloud/sentinel/: .ycm_extra_conf.py  CMakeLists.txt  sentinel.thrift  sentinel_client.cc  sentinel_client.h  sentinel_mapper.cc  sentinel_mapper.h  sentinel_model.cc  sentinel_model.h  sentinel_user.cc  sentinel_user.h
cloud/sentinel/cli/: .ycm_extra_conf.py  CMakeLists.txt  author.cc  author.h  cli.cc  create.cc  create.h  login.cc  login.h
cloud/sentinel/cli/.anvil/: sentinel_key.json
cloud/sentinel/server/: .ycm_extra_conf.py  CMakeLists.txt  sentinel_handler.cc  sentinel_handler.h  server.cc
cloud/services_def/: authentication.thrift  standard_exceptions.thrift  user_data.thrift
cloud/utils/: thrift_http_client.hh  thrift_http_server.hh  thrift_standard_client.hh
core/shell/: .dev_env.swp  base  dev  dev_env  log  log.sh  register_etcd.sh
core/tools/: build  build_services  clear_swap  dev  etcd_parser  gcounter  replace
csci/data_structures/cpp_refresher/: .ycm_extra_conf.py  CMakeLists.txt  cpp_refresher.cc  cpp_refresher.h  unit_tests.cc
experimental/fbthrift_test/: .ycm_extra_conf.py  CMakeLists.txt  calculator.thrift  client.cpp  index.html  old_server.cpp  server.cpp
experimental/fbthrift_test/gen-cpp/: Calculator.cpp  Calculator.h  Calculator_server.skeleton.cpp  calculator_constants.cpp  calculator_constants.h  calculator_types.cpp  calculator_types.h
experimental/fbthrift_test/gen-cpp2/: Calculator.cpp  Calculator.h  Calculator.tcc  Calculator_client.cpp  calculator_constants.cpp  calculator_constants.h  calculator_types.tcc
experimental/fbthrift_test/gen-js/: Calculator.js  calculator_types.js
experimental/online_ide/: billet_service.js  crucible_repo.js  crucible_service.js  differencer.js  forge.html  index.html  scripts.js  sentinel_service.js  style.css  tmp.html
experimental/sample_assignment/: CMakeLists.txt  build  build_clean  linked_list.cc  linked_list.h  main.cc
experimental/test_code/: .ycm_extra_conf.py  CMakeLists.txt  test_code.cc
file_explorer/: file_explorer.css  file_explorer.htm  file_explorer.js
open_to_lan/: Program.cs  package.json
open_to_lan/aws/: Dockerfile  run_script
open_to_lan/client/: index.html  update_deps
open_to_lan/output/: LBXamarinSDK.cs
open_to_lan/server/: datasources.json  model-config.json
scorch/: build_xm  launch_stack  package.json
scorch/anvil/: .ycm_extra_conf.py  CMakeLists.txt  anvil.cc  anvil.h  anvil.thrift  anvil_client.cc  anvil_client.h  anvil_interface.h  anvil_main.cc  anvil_snapshot.cc  anvil_snapshot.h  anvil_snapshot.thrift  build  build_clean  test_harness.cc  test_harness.h
scorch/anvil/cli/: .ycm_extra_conf.py  CMakeLists.txt  cli.cc
scorch/anvil/python/: build_py  build_thrift_py
scorch/aws/: build  (+8 more)
scorch/cloud/billet/: .ycm_extra_conf.py  CMakeLists.txt  Dockerfile  billet.thrift  billet_session.cc  billet_session.h  build_client_image  docker_run_harness.cc  docker_run_harness.h  regex.txt
scorch/cloud/billet/server/: .ycm_extra_conf.py  CMakeLists.txt  billet_handler.cc  billet_handler.h  server.cc
scorch/cloud/blaze/: .ycm_extra_conf.py  CMakeLists.txt  blaze.thrift  blaze_client.cc  blaze_client.h  blaze_handler.cc  blaze_handler.h  blaze_mapper.cc  blaze_mapper.h  blaze_model.cc  blaze_model.h  server.cc
scorch/cloud/crucible/: .ycm_extra_conf.py  CMakeLists.txt  crucible.cc  crucible.thrift  crucible_client.cc  crucible_client.h  crucible_handler.cc  crucible_handler.h  crucible_mapper.cc  crucible_mapper.h  crucible_model.cc  crucible_model.h  crucible_repo.cc  crucible_repo.h
scorch/cloud/crucible/cli/: .crucible_cli_create.cc.swo  .ycm_extra.conf.py  CMakeLists.txt  cli.cc  commit.cc  commit.h  create.cc  create.h  crucible_cli.cc  crucible_cli_create.cc  status.cc  status.h
scorch/cloud/crucible/cli/.crucible/: crucible_repo.json
scorch/cloud/crucible/server/: .ycm_extra_conf.py  CMakeLists.txt  crucible_handler.cc  crucible_handler.h  server.cc
template_site/: .gitignore  Gruntfile.js  package.json
tools/: test
utils/differencer/: .ycm_extra_conf.py  CMakeLists.txt  differencer.cc  differencer.h  differencer.thrift  differencer_mapper.cc  differencer_mapper.h  differencer_test.cc
(+408 files in other folders)
